updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hi there! I am a UW Alumni looking to make a career change.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was raised in Charlotte, NC and then moved to Oak Park, CA for a few years. I have been in Seattle, WA for 8 years now.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love hiking, snowboarding, crotcheting, and everything else craft-related.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Still to be determined! I am looking forward to exploring options associated with Web Development.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Ballard neighborhood in Seattle, WA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love to be challenged and to continuously learn and acquire new skills. Web development seems to be the perfect fit to accomplish those goals as it is constantly changing and growing!</p>
     </section>
 
     <footer id="footer">
